--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </div>
      </div> 
      <div class="b-page__Profile">
+        <div class="b-page__ProfileHead">
+            <div>
+                
+            </div>
+        </div>
      </div>
      <div class="b-page__Contact">
      </div>
